--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,22 @@
 language: ruby
+rvm:
+  - 1.8.7
+  - 1.9.2
+  - 1.9.3
+  - 2.0.0
+  - 2.1.0
+  - ruby-head
+  - jruby-18mode
+  - jruby-19mode
+  - jruby-head
+  - ree
 script:
   - make test
   - bundle exec image_optim --info
   - bundle exec rspec
   - '! bundle show rubocop || bundle exec rubocop' # run rubocop only if bundled
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
