Revert "temporary switch to jruby-1.7.17 due to travis-ci/travis-ci#3067"
This reverts commit ca09c169a2cefe8b1aeec49ee4239db91d210442.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.0
-  - jruby-1.7.17-18mode
-  - jruby-1.7.17-19mode
+  - jruby-18mode
+  - jruby-19mode
   - ree
 script:
   if [ -z "$RUBOCOP" ]; then
