--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,9 @@ Style/PercentLiteralDelimiters:
 Style/Semicolon:
   AllowAsExpressionSeparator: true
 
+Style/SignalException:
+  EnforcedStyle: semantic
+
 Style/SpaceBeforeBlockBraces:
   EnforcedStyle: no_space
 
