splat expansions are nice

--- a/boxes/.rubocop.yml
+++ b/boxes/.rubocop.yml
@@ -3,6 +3,9 @@ inherit_from: ../.rubocop.yml
 Lint/Eval:
   Exclude: [Rakefile]
 
+Lint/UnneededSplatExpansion:
+  Enabled: false
+
 Metrics/LineLength:
   Enabled: false
 
