calm down rubocop
really?

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
     - '*.gemspec'
     - Vagrantfile
 
+Bundler/OrderedGems:
+  Enabled: false
+
 Lint/EndAlignment:
   AlignWith: variable
 
