threaded update of versions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,9 @@ Style/IfUnlessModifier:
 Style/IndentHash:
   EnforcedStyle: consistent
 
+Style/MultilineBlockChain:
+  Enabled: false
+
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
     '%w': '[]'
