--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,10 @@ rvm:
   - jruby-18mode
   - jruby-19mode
   - ree
-script: |
-  (
-    set -ex
-    if [ -n "$RUBOCOP" ]; then
-      bundle exec rubocop
-    else
-      make test
-      bundle exec image_optim --info
-      bundle exec rspec
-    fi
-  )
+script:
+  - make test
+  - bundle exec image_optim --info
+  - bundle exec rspec
 before_install:
   if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi
 matrix:
@@ -27,5 +20,6 @@ matrix:
   include:
     - os: osx
       rvm: default
-    - env: RUBOCOP=true
+    - env: RUBOCOP=✓
       rvm: '2'
+      script: bundle exec rubocop
