--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,14 @@ before_install:
   if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi
 matrix:
   include:
+    - dist: trusty
+      rvm: default
     - os: osx
       rvm: default
+      osx_image: xcode7.3
+    - os: osx
+      rvm: default
+      osx_image: xcode8.3
     - env: RUBOCOP=✓
       rvm: '2.4.1'
       script: bundle exec rubocop
