--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,21 @@ AllCops:
 Bundler/OrderedGems:
   Enabled: false
 
+Layout/AccessModifierIndentation:
+  EnforcedStyle: outdent
+
+Layout/DotPosition:
+  EnforcedStyle: trailing
+
+Layout/IndentHash:
+  EnforcedStyle: consistent
+
+Layout/SpaceBeforeBlockBraces:
+  EnforcedStyle: no_space
+
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*_spec.rb
@@ -19,14 +34,8 @@ Security/YAMLLoad:
   Exclude:
     - script/livecheck
 
-Style/AccessModifierIndentation:
-  EnforcedStyle: outdent
-
 Style/Alias:
   EnforcedStyle: prefer_alias_method
-
-Style/DotPosition:
-  EnforcedStyle: trailing
 
 Style/DoubleNegation:
   Enabled: false
@@ -43,9 +52,6 @@ Style/HashSyntax:
 Style/IfUnlessModifier:
   MaxLineLength: 40
 
-Style/IndentHash:
-  EnforcedStyle: consistent
-
 Style/MultilineBlockChain:
   Enabled: false
 
@@ -54,12 +60,6 @@ Style/Semicolon:
 
 Style/SignalException:
   EnforcedStyle: semantic
-
-Style/SpaceBeforeBlockBraces:
-  EnforcedStyle: no_space
-
-Style/SpaceInsideHashLiteralBraces:
-  EnforcedStyle: no_space
 
 Style/SpecialGlobalVars:
   Enabled: false
