--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,7 +44,7 @@ Style/EmptyCaseCondition:
   Enabled: false
 
 Style/Encoding:
-  EnforcedStyle: when_needed
+  Enabled: false
 
 Style/HashSyntax:
   EnforcedStyle: hash_rockets
