travis: add xcode9.3 osx images

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ matrix:
     - os: osx
       rvm: default
       osx_image: xcode8.3
+    - os: osx
+      rvm: default
+      osx_image: xcode9.3
     - env: RUBOCOP=✓
       rvm: '2.4.4'
       script: bundle exec rubocop
