--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,9 @@ script:
   - bundle exec image_optim --info
   - bundle exec rspec
 before_install:
+  - gem install bundler
+  - ruby -e 'require "rubygems"; require "bundler/inline"; gemfile{ source "https://rubygems.org"; gem "rubygems-update" }' # get compatible version of rubygems-update
   - gem update --system
-  - gem update bundler
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi
   - make ldd-version
 matrix:
