--- a/boxes/Rakefile
+++ b/boxes/Rakefile
@@ -1,13 +1,15 @@
 require 'pathname'
 
 class Box # :nodoc:
-  attr_reader :definition_path, :definition_dir, :name, :path
+  attr_reader :definition_path, :definition_dir, :name, :path, :groups
 
   def initialize(definition_path)
     @definition_path = Pathname(definition_path)
     @definition_dir = @definition_path.dirname
     @name = @definition_dir.basename.to_s
     @path = Pathname("#{@name}.box")
+    parts = @name.split('-')
+    @groups = (1...parts.length).map{ |n| parts.take(n).join('-') }
   end
 
   def dependencies
@@ -47,27 +49,33 @@ private
   end
 end
 
-desc 'build all boxes'
-task :build
-
-desc 'add all boxes to vagrant'
-task :add
-
 Dir['definitions/*/definition.rb'].each do |definition_path|
   box = Box.new(definition_path)
 
-  desc "build #{box.path}"
+  desc "build #{box.name} box"
   file box.path => box.dependencies do
     box.build
   end
-  task :build => box.path
 
   namespace :add do
-    desc "add #{box.path}"
+    desc "add #{box.name} box to vagrant"
     task box.name => box.path do
       box.add
     end
   end
+
+  box.groups.each do |group|
+    desc "build #{group} boxes"
+    task "build:#{group}" => box.path
+
+    desc "add #{group} boxes to vagrant"
+    task "add:#{group}" => "add:#{box.name}"
+  end
+
+  desc 'build all boxes'
+  task :build => box.path
+
+  desc 'add all boxes to vagrant'
   task :add => "add:#{box.name}"
 end
 
