--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,7 +14,7 @@ Layout/AccessModifierIndentation:
 Layout/DotPosition:
   EnforcedStyle: trailing
 
-Layout/IndentHash:
+Layout/IndentFirstHashElement:
   EnforcedStyle: consistent
 
 Layout/RescueEnsureAlignment:
