--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - gem install rubygems-update || gem install rubygems-update --version '< 3'
   - gem update --system
   - gem install bundler || gem install bundler --version '< 2'
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi; which convert
   - make ldd-version
 matrix:
   include:
