--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ matrix:
     - os: osx
       rvm: default
       osx_image: xcode11.2
-    - env: RUBOCOP=✓
+    - env: RUBOCOP=1
       rvm: '2.6.5'
       script: bundle exec rubocop
-    - env: CHECK_RUBIES=✓
+    - env: CHECK_RUBIES=1
       rvm: '2.6.5'
       script: bundle exec travis_check_rubies
