--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 before_install:
   - 'echo "gem: --no-ri --no-rdoc --no-document" > ~/.gemrc'
   - gem install rubygems-update || gem install rubygems-update --version '< 3'
-  - gem update --system
+  - update_rubygems
   - gem install bundler || gem install bundler --version '< 2'
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install imagemagick; fi; which convert
   - make ldd-version
