--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ AllCops:
     - 'build/**/*'
     - 'download/**/*'
     - Vagrantfile
+  NewCops: enable
 
 Bundler/OrderedGems:
   Enabled: false
@@ -39,6 +40,9 @@ Metrics/MethodLength:
 Security/YAMLLoad:
   Exclude:
     - script/livecheck
+
+Style/AccessorGrouping:
+  Enabled: false
 
 Style/Alias:
   EnforcedStyle: prefer_alias_method
