--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,6 +56,9 @@ Style/EmptyCaseCondition:
 Style/FormatStringToken:
   Enabled: false
 
+Style/HashConversion:
+  Enabled: false
+
 Style/HashEachMethods:
   Enabled: true
 
