replacing travis ci with github actions workflow
It was a long run, but latest changes are forcing to find an alternative

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
     - '*.gemspec'
     - 'build/**/*'
     - 'download/**/*'
+    - 'vendor/bundle/**/*'
     - Vagrantfile
   NewCops: enable
 
