--- a/.github/workflows/livecheck.yml
+++ b/.github/workflows/livecheck.yml
@@ -7,4 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: make livecheck
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1'
+        bundler-cache: true
+    - run: bundle exec make livecheck
