--- a/.github/workflows/livecheck.yml
+++ b/.github/workflows/livecheck.yml
@@ -18,7 +18,7 @@ jobs:
         ruby-version: '3.1'
         bundler-cache: true
     - run: |
-        bundle exec make livecheck || if (( $? == 1 )); then
+        bundle exec script/livecheck || if (( $? == 1 )); then
           exit 1
         else
           echo '::set-output name=RETRY::1'
