--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,9 +3,16 @@ on:
   push:
     tags:
     - '*'
+  workflow_dispatch:
 jobs:
   docker-build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        params:
+        - ''
+        - DOCKER_FILE=Dockerfile.debian DOCKER_TAG_SUFFIX=-debian
+      fail-fast: false
     steps:
     - uses: actions/checkout@v2
     - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -13,4 +20,4 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - run: make docker-push
+    - run: make docker-push ${{ matrix.params }}
