--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - macos-latest
+        - macos-13
         ruby:
         - '2.6'
         - '2.7'
