switch from macox-13 to macos-15-intel for intel runner

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         name: on-linux
         path: vendor/
   build-on-darwin-x86_64:
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
     - uses: actions/checkout@v5
     - run: uname -m
