--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - macos-13
+        - macos-15-intel
         - macos-14
         ruby:
         - '2.7'
